--- a/pages/4-contacto.html
+++ b/pages/4-contacto.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/estilossass.css">
 </head>
 <body>
+<header class="sticky-top">
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/img/ImgMonaLisa/LogoMonaLisa.png" alt="Logo Monalisa"></a>
         <!-- INICIO BOTÓN MODO DARK -->
@@ -40,57 +41,89 @@
         </ul>
     </div>  
 </nav>
+</header>
+
 <main class="container" style="margin-bottom: 60px; margin-top: 50px;">
-<form>
-    <div class="form-row">
-        <div class="col-md-6 mb-3">
-            <label for="validationServer01">Nombre</label>
-            <input type="text" class="form-control is-invalid" id="validationServer01" aria-describedby="validationServer02Feedback" required>
-        <div class="invalid-feedback">
-            Por favor, díganos su nombre.
-        </div>
-        </div>
-        <div class="col-md-6 mb-3">
-            <label for="validationServer02">email</label>
-            <input type="email" class="form-control is-invalid" id="validationServer02" aria-describedby="validationServer02Feedback" required>
-            <div class="invalid-feedback">
-                Por favor, ingrese una dirección válida.
+    <form id="mi-form" class="needs-validation" novalidate action="https://formspree.io/f/xjvleyrk" method="POST">
+        <div class="form-row">
+            <div class="col-md-6 mb-3">
+                <label for="validationCustom01">Nombre</label>
+                <input type="text" class="form-control" id="validationCustom01" value="" required name="nombre">
+                <div class="valid-feedback">Se ve bien!</div>
+            </div>
+            <div class="col-md-6 mb-3">
+                <label for="validationCustom02">email</label>
+                <input type="email" class="form-control" id="validationCustom02" value="" required name="email">
+                <div class="valid-feedback">Se ve bien!</div>
             </div>
         </div>
-    </div>
-    <div class="form-row">
-        <div class="col-md-3 mb-3">
-            <label for="validationServer03">Teléfono</label>
-            <input type="number" class="form-control is-invalid" id="validationServer03" aria-describedby="validationServer03Feedback" required>
-            <div id="validationServer03Feedback" class="invalid-feedback">
-                Por favor, dénejos un número válido.
+        <div class="form-row">
+            <div class="col-md-3 mb-3">
+                <label for="validationCustom03">Teléfono</label>
+                <input type="number" class="form-control" id="validationCustom03" required name="tel">
+                <div class="invalid-feedback">Por favor, déjenos un número de contacto.</div>
+            </div>
+            <div class="col-md-9 mb-3">
+                <label for="validationCustom05">¿Cómo podemos ayudar?</label>
+                <input type="text" class="form-control" id="validationCustom05" required name="mensaje">
+                <div class="invalid-feedback">Por favor, déjenos un comentario.</div>
             </div>
         </div>
-        <div class="col-md-9 mb-3">
-            <label for="validationServer04">Comentario</label>
-            <input type="text" class="form-control is-valid" id="validationServer04" value="Quiero conocer más sobre sus productos y servicios" required>
-            <div id="validationServer04Feedback" class="valid-feedback">
-                Por favor, idíquenos cómo podemos ayudarle.
-            </div>
-        </div>
-    </div>
-    <button class="btn btn-primary" type="submit">Enviar información</button>
-</form>
+        <button class="btn btn-primary" type="submit">Enviar Información</button>
+    </form>
+    <!-- INICIO SCRIPT DE VALIDACIÓN DA DATOS EN FORMULARIO. El formulario usa el servidor de FORMSPREE -->
+    <script>
+        (function() {
+            'use strict';
+            window.addEventListener('load', function() {
+                // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                var forms = document.getElementsByClassName('needs-validation');
+                // Loop over them and prevent submission
+                var validation = Array.prototype.filter.call(forms, function(form) {
+                form.addEventListener('submit', function(event) {
+                    if (form.checkValidity() === false) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+                });
+            }, false);
+        })();
+    </script>
+<!-- fin validación de formulario -->
+<!-- INICIO SCRIPT PARA EVITAR APAREZCA PÁGINA DE CONFIRMACIÓN DE FORMSPREE, reemplazado con mensaje de alerta -->
+    <script>
+        const $form = document.getElementById("mi-form");
+        $form.addEventListener('submit', handleSubmit);
+        async function handleSubmit(event){
+            event.preventDefault();
+            const form = new FormData(this);
+            const response = await fetch(this.action, {
+                method: this.method,
+                body: form,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            })
+            if (response.ok){
+                this.reset()
+                alert('Gracias por contactarnos, le responderemos en breve.')
+            }
+        }
+    </script>
 </main>
-<div class="grid-container">
+<!-- INICIO BOTÓN WHATSAPP -->
+<a class="btn-wsp" target="_blank" href="https://api.whatsapp.com/send?phone=5493515745330">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-whatsapp" viewbox="0 0 16 16">
+        <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+    </svg>
+</a>
+<!-- fin botón whatsapp -->
+<footer class="grid-container">
     <div class="box1"></div>
-    <div class="box2"></div>
-    <div class="box3"></div>
-    <div class="box4"></div>
-    <div class="box5"></div>
-</div>
-<footer class="container">
-        <div class="row">
-        <div class="col-sm-3  d-flex align-items-center d-flex justify-content-center">
-            <a class="footerUl" href="index.html"><img class="logo" src="../assets/img/ImgMonaLisa/LogoMonaLisa.png" alt="Logo Monalisa"></a>
-        </div>
-        <div class="col-sm d-flex align-items-center d-flex justify-content-center">
-            <ul class="footerUl">
+    <div class="box2 d-flex align-items-center justify-content-center">
+        <ul class="footerUl">
             <li><a href="https://www.facebook.com/onolovi"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                 <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
             </svg></a></li>
@@ -100,10 +133,16 @@
             <li><a href="https://www.linkedin.com/in/hectorvazquezcuestas"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                 <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
             </svg></a></li>
-            </ul>
-        </div>
-        </div>
-    </footer>
+        </ul>
+    </div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box4 d-flex align-items-center justify-content-center">
+        <a class="footerUl" href="../index.html"><img class="logo" src="../assets/img/ImgMonaLisa/LogoMonaLisa.png" alt="Logo Monalisa"></a>
+    </div>
+    <div class="box5"></div>
+</footer>
+
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
