TrabajoFinal-DesWeb-Coderhouse

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <div class="box3"></div>
   <div class="box3"></div>
   <div class="box4 d-flex align-items-center justify-content-center">
-      <a class="footerUl" href="index.html"><img class="logo" src="../assets/img/ImgMonaLisa/LogoMonaLisa.png" alt="Logo Monalisa"></a>
+      <a class="footerUl" href="index.html"><img class="logo" src="./assets/img/ImgMonaLisa/LogoMonaLisa.png" alt="Logo Monalisa"></a>
   </div>
   <div class="box5"></div>
 </footer>
